lxqt-config-0.15.0 / 2020-04-22
===============================
  * Fixed changing of shortcut for switching keyboard layout.
  * Inserted default GTK3 themes in lxqt-config-appearance.
  * Set cursor style in GTK2, GTK3 and xsettingsd.
  * Don't use automatic string conversions.
  * C++11 code updates.
  * A better method to drag and drop monitors in lxqt-config-monitor.
  * Removed old mouse accel/sensitivity options.
  * Fixed warnings on applying settings in lxqt-config-monitor.
  * Fixed forgetting of lxqt-config-monitor's config.
  * Removed old mouse accel/sensitivity options.

lxqt-config-0.14.1 / 2019-02-24
===============================

  * Apply button for appearance and input config dialogs
  * Updated translations
  * Note for packagers: lxqt-config now depends on liblxqt >= 0.14.1

lxqt-config-0.14.0 / 2019-01-25
===============================

  * Implemented Features:
    - Introduced GTK appearance settings
    - Initial touchpad settings and improved input device handling
  * Implementation fixed:
    - lxqt-config: Removed ancient Qt workaround that creates problems now
    - lxqt-config-appearance: Some GUI fixes
    - lxqt-config-appearance: mkpath if settings of GTK doesn't exists.
    - lxqt-config-brightness: Backlight control updated
    - lxqt-config-brightness:
      XRandrBrightness::backlight_get_with_range return value
    - lxqt-config-monitor: Monitor name is added to output.
  * Improved cmake scripting
    - Set cmake_minimum_required to 3.1.0
    - Check for xi and libudev
    - Removed QUIET from find_package
    - Removed dependency on QtConcurrent
    - Removed locale compile definitons
    - Installed former missed man pages
  * Moved translations from lxqt-l10n back to lxqt-policykit
    - Removed obsolete translation fuctionality
    - Added translation promo in README.md
  * Translation updates

lxqt-config-0.13.0 / 2018-05-21
===============================

  * Spanish translation uptdate